--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
             <article class="weather-card">
                 <div class="weather-card__location">
                     <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Medellin</h2>
+                    <h2 class="weather-card__city">Armenia</h2>
                     <p class="weather-card__status">Thunder</p>
                 </div>
                 <div class="weather-card__temperature">
@@ -57,7 +57,7 @@
             <article class="weather-card">
                 <div class="weather-card__location">
                     <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Medellin</h2>
+                    <h2 class="weather-card__city">Bogota D.C</h2>
                     <p class="weather-card__status">Thunder</p>
                 </div>
                 <div class="weather-card__temperature">
@@ -68,7 +68,7 @@
             <article class="weather-card">
                 <div class="weather-card__location">
                     <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Medellin</h2>
+                    <h2 class="weather-card__city">Cartagena</h2>
                     <p class="weather-card__status">Thunder</p>
                 </div>
                 <div class="weather-card__temperature">
@@ -84,12 +84,13 @@
 
 
 
-<!--con display grid mostar dos card por linea, con display grid generar un espaciado entre las cards de 1 rem
+<!--con display grid mostar dos card por linea, con display grid 
+    generar un espaciado entre las cards de 1 rem ok
 -->
 
-<!--añadir un borde derecho al side bar -->
+<!--añadir un borde derecho al side bar ok -->
 
-<!--añadir un pading al logo-->
+<!--añadir un pading al logo ok-->
 
 <!--Consulta como funcionan los pre procesadores como scss,sass-->
 
