Actualizacion de tareas

--- a/Index.html
+++ b/Index.html
@@ -94,6 +94,10 @@
 
 <!--Consulta como funcionan los pre procesadores como scss,sass-->
 
-<!--Como funciona webpack-->
+<!--Como funciona webpack ok-->
 
-<!--montar los cambios en github utilizando git-->
+<!--montar los cambios en github utilizando git ok-->
+
+<!--l modelo de caja ok-->
+
+<!--Según con lo consultado, eliminar el margin-top que está en el archivo main.css y añadir un espaciado interno al .main-container-->
