tarea y ejercicos para la proxima clase

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <nav>
             <section class="left-sidebar__logo">
                 <a> 
-                    <img src="src/img/logo.png">
+                    <img src="src/img/logo.webp">
                 </a>
             </section>
             <ul class="left-sidebar__menu">
@@ -80,11 +80,15 @@
     </main>
   
     <footer class="footer-endPage">
-       <div class="contenedor">
-        <p class="footer-endPage">Copyright 2023©</p>
-       </div>
-    </footer>
+        <div class="footer-endPage__contenedor">
+         <p class="footer-endPage__parrafo">Copyright 2023©</p>
+        </div>
+     </footer>
   
+<!--Scripts-->
+
+<script src="/src/js/main.js"></script>
+
   </body>
 
 </html>
