actualizacion de activdad 26 de enero

--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
     <!--TemperatureCards-->
     <main class="main-container">
         <section class="weather-section">
-            <article class="weather-card">
+            <article id="medellin" class="weather-card">
                 <div class="weather-card__location">
                     <h3 class="weather-card__country">Colombia</h3>
                     <h2 class="weather-card__city">Medellin</h2>
@@ -43,6 +43,7 @@
                     <p class="weather-card__grades">20°c</p>
                 </div>
             </article>
+
             <article class="weather-card">
                 <div class="weather-card__location">
                     <h3 class="weather-card__country">Colombia</h3>
