--- a/Index.html
+++ b/Index.html
@@ -33,49 +33,12 @@
     <main class="main-container">
         <section class="weather-section">
             <article id="medellin" class="weather-card">
-                <div class="weather-card__location">
-                    <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Medellin</h2>
-                    <p class="weather-card__status">Thunder</p>
-                </div>
-                <div class="weather-card__temperature">
-                    <img class="weather-card__icon" src="src/img/thunder_icon.png" alt="weather_icon">
-                    <p class="weather-card__grades">20°c</p>
-                </div>
             </article>
-
-            <article class="weather-card">
-                <div class="weather-card__location">
-                    <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Armenia</h2>
-                    <p class="weather-card__status">Thunder</p>
-                </div>
-                <div class="weather-card__temperature">
-                    <img class="weather-card__icon" src="src/img/thunder_icon.png" alt="weather_icon">
-                    <p class="weather-card__grades">20°c</p>
-                </div>
+            <article id="armenia" class="weather-card">
             </article>
-            <article class="weather-card">
-                <div class="weather-card__location">
-                    <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Bogota D.C</h2>
-                    <p class="weather-card__status">Thunder</p>
-                </div>
-                <div class="weather-card__temperature">
-                    <img class="weather-card__icon" src="src/img/thunder_icon.png" alt="weather_icon">
-                    <p class="weather-card__grades">20°c</p>
-                </div>
+            <article id="bogota" class="weather-card">
             </article>
-            <article class="weather-card">
-                <div class="weather-card__location">
-                    <h3 class="weather-card__country">Colombia</h3>
-                    <h2 class="weather-card__city">Cartagena</h2>
-                    <p class="weather-card__status">Thunder</p>
-                </div>
-                <div class="weather-card__temperature">
-                    <img class="weather-card__icon" src="src/img/thunder_icon.png" alt="weather_icon">
-                    <p class="weather-card__grades">20°c</p>
-                </div>
+            <article id="cartagena" class="weather-card">
             </article>
         </section>
     </main>
@@ -86,9 +49,9 @@
         </div>
      </footer>
   
-<!--Scripts-->
+    <!--Scripts-->
 
-<script src="/src/js/main.js"></script>
+    <script src="/src/js/main.js"></script>
 
   </body>
 
