eliminando .env y actualizando proyecto

--- a/Index.html
+++ b/Index.html
@@ -34,11 +34,15 @@
         <section class="weather-section">
             <article id="medellin" class="weather-card">
             </article>
-            <article id="armenia" class="weather-card">
+            <article id="armenia-quindio" class="weather-card">
             </article>
             <article id="bogota" class="weather-card">
             </article>
             <article id="cartagena" class="weather-card">
+            </article>
+            <article id="sincelejo" class="weather-card">
+            </article>
+            <article id="bucaramanga" class="weather-card">
             </article>
         </section>
     </main>
