--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles/main.css" />
+    <!-- <link rel="stylesheet" href="src/styles/main.css" /> -->
     <title>App clima</title>
   </head>
   <body>
@@ -55,7 +55,7 @@
   
     <!--Scripts-->
 
-    <script src="/src/js/main.js"></script>
+    <script src="/dist/main.js"></script>
 
   </body>
 
